2001-08-13  Michael Meeks  <michael@ximian.com>

	* gconf/Makefile.am (-DIID): rename to GNOME_Config_Daemon
	to fit with the bonobo namespace guidelines.

2001-08-13  Marco Pesenti Gritti  <mpeseng@tin.it>

	* doc/gconf/gconf.sgml: small explanation about 
	AM_GCONF_SOURCE_2 macro
	
2001-08-13  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconf-internals.c (gconf_load_source_path): patch from
	Adam Spiers to honor variables in include lines

	* gconf/gconf-database.c (notify_listeners_cb):
	indentation/whitespace changes

	* backends/xml-entry.c (entry_fill_from_node): Only print a
	warning if there's no schema name. Avoids spurious warnings 
	on nodes that only have a schema name.

2001-08-13  Michael Meeks  <michael@ximian.com>

	* gconf/gconf-internals.c: remove nano_sleep; it's unused.

	* configure.in: remove nanosleep check.

2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

	* configure.in: remove the chmod on gconf-config,
	the file has been removed
	* gconf.m4.in: rename AM_GCONF_SOURCE to AM_GCONF_SOURCE_2
	to not break parallel installs
	
2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

	* gconf/gconf.m4.in: remove duplicate macro
	
2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

        * gconf/gconf.m4.in: New file. GCONF_SCHEMA_CONFIG_SOURCE macro
	* configure.in: add gconf.m4 to AC_OUTPUT
        * Makefile.am: add gconf.m4 to EXTRA_DIST and install-data-local
	Setup a default gconf source on make install.
        * galeon.spec.in: Distribute also the path file and
        the directories for the default source.
        * gconf/Makefile.am: install the default path as "path" instead
        of "path.example". Add GCONF_ETCDIR define.
        * gconf/gconftool.c: Add --get-default-source option.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* gconf/gconfd.oafinfo.in: Renamed -> gconfd.server.in.

	* Makefile.am: Install gconfd.server into the correct dir
	for bonobo-activation.
