@@ -12,7 +12,7 @@ INCLUDES=\
 	-DGCONF_BUILDDIR=\""$(top_builddir)"\" 			\
 	-DGCONF_BACKEND_DIR=\""$(pkglibdir)/$(MAJOR_VERSION)"\" \
 	-DVERSION=\""$(VERSION)"\" \
-	-DIID=\""OAFIID:gconfd:19991118"\" \
+	-DIID=\""OAFIID:GNOME_Config_Daemon"\" \
 	-DGCONF_ENABLE_INTERNALS=1 \
 	$(NULL)
 
@@ -93,7 +93,7 @@ libgconf_2_la_LDFLAGS = -version-info $(GCONF_CURRENT):$(GCONF_REVISION):$(GCONF
 
 libgconf_2_la_LIBADD = $(INTLLIBS) $(DEPENDENT_LIBS)
 
-EXTRA_DIST=GConf.idl gconfd.server.in default.path.in gconfmarshal.list
+EXTRA_DIST=GConf.idl GNOME_Config.server.in default.path.in gconfmarshal.list
 
 install-exec-local:
 	(cd $(DESTDIR)$(bindir) && $(RM) gconftool && $(LN_S) -f gconftool-$(MAJOR_VERSION) gconftool)
@@ -101,8 +101,8 @@ install-exec-local:
 install-data-local:
 	-mkdir -p $(DESTDIR)$(sysconfdir)/gconf/$(MAJOR_VERSION)
 	$(INSTALL_DATA) default.path $(DESTDIR)$(sysconfdir)/gconf/$(MAJOR_VERSION)/path
-	-mkdir -p $(DESTDIR)$(datadir)/oaf
-	$(INSTALL_DATA) gconfd.server $(DESTDIR)$(datadir)/bonobo-activation/gconfd-$(MAJOR_VERSION).server
+	-mkdir -p $(DESTDIR)$(libdir)/bonobo/servers
+	$(INSTALL_DATA) GNOME_Config.server $(DESTDIR)$(libdir)/bonobo/servers/GNOME_Config-$(MAJOR_VERSION).server
 
 gconfmarshal.h: @REBUILD@ stamp-gconfmarshal.h
 	@true
