@@ -1,7 +1,15 @@
-2001-08-13  Michael Meeks  <michael@ximian.com>
+2001-08-14  Michael Meeks  <michael@ximian.com>
+
+	* configure.in: depend on bonobo-activation >= 0.9.1
+
+	* gconf/Makefile.am: Update to install GNOME_Config.server.
+
+	* configure.in: update to GNOME_Config.server
 
 	* gconf/Makefile.am (-DIID): rename to GNOME_Config_Daemon
 	to fit with the bonobo namespace guidelines.
+
+	* gconf/GNOME_Config.server.in: update & indent.
 
 2001-08-13  Marco Pesenti Gritti  <mpeseng@tin.it>
 
